version/0.19/_sources/api/solver/_autosummary/settings/display_states.rst.txt
:orphan:

.. _display_states:

display_states
==============

.. autoclass:: ansys.fluent.core.solver.settings_241.display_states.display_states
    :show-inheritance:

.. rubric:: Methods

==========================================   ===================================================================================

Method                                                                                                                   Summary

==========================================   ===================================================================================
:ref:`delete <delete_1>`                                                                                Delete selected objects.

:ref:`list <list_3>`                                                                                             'list' command.

:ref:`list_properties <list_properties_1>`                                                 List active properties of the object.

:ref:`make_a_copy <make_a_copy>`                                                                    Create a copy of the object.

:ref:`use_active <use_active>`                                                                             'use_active' command.

:ref:`restore_state <restore_state>`                                                 Apply a display state to the active window.

:ref:`copy <copy_5>`                             Create a new display state with settings copied from an existing display state.

:ref:`read <read_3>`                                                                            Read display states from a file.

:ref:`write <write_1>`                                                                           Write display states to a file.

==========================================   ===================================================================================

.. rubric:: Named object type

:ref:`display_states_child <display_states_child>`


.. rubric:: Included in:

====================   ==================

Parent                            Summary

====================   ==================
:ref:`views <views>`       'views' child.

====================   ==================

